# f_passport_n

./: .env  .env.example  .gitignore  123  db.sqlite3  manage.py  models.xlsx  pyproject.toml  Презентация1.pptx
core/: admin.py  apps.py  check_data.py  context_processors.py  forms.py  models.py  signals.py  views copy.py  views.py
core/migrations/: 0001_initial.py  0002_statistics_period_statisticsshort_period.py  0003_mo_area.py  0004_remove_mo_population_alter_mo_href_and_more.py  0005_alter_mo_href_alter_mo_path_class_alter_mo_path_d_and_more.py  0006_alter_statisticsshort_f.py  0007_alter_statistics_f.py  0008_statisticsshort_mo.py  0009_alter_statisticsshort_mo.py  0010_statisticsshort_chn_statisticsshort_fg.py  0011_statisticsshort_chn_sub.py  0012_statisticsshort_pop_per.py  0013_alter_review_mo_alter_review_ai_checked_status_and_more.py  0014_alter_mo_options_alter_review_options_and_more.py  0015_review_author.py  0016_alter_review_author.py  0017_alter_review_author.py  0018_reviewanswer.py  0019_alter_review_options_alter_reviewanswer_options.py  0020_alter_reviewanswer_options.py
core/templates/: MO.html  MO_City.html  answer_form.html  base.html  import.html  index.html  landing copy.html  landing.html  login.html  logout.html  nav-bar.html  region.html  register.html  review_form.html  reviews.html
fd_fg_passport/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: main.css  main1.css  sub.css
static/js/: main copy.js
staticfiles/js/: main.js
